Removing favicon and setting title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SafeSites is a website designed to help protect vulnerable users online by identifying the amount of hateful content and malicious content on a website. Our mission is to help those who do not have access to premium websites by ensuring that the free websites they use are beneficial and safe for them to browse as well as give more equal access to safe websites."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SafeSites</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
